# parser_vacancies

./: .gitignore  README.md  main.py  pyproject.toml
src/: api.py  json_data.py
