[tool.poetry]
name = "job-parser"
version = "0.1.0"
description = ""
authors = ["Natalia Zueva <zueva_natalia@mail.ru>"]
readme = "README.md"
packages = [{include = "job_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
